# learn-windows-automation

./: .gitignore  LICENSE  Makefile  README.md  demo.py  main.py  pyproject.toml  test_hello_world.py
config/: scripts.toml  settings.toml
docs/: project_structure.md  testing_scope.md
examples/: advanced_window_manager.py  excel_data_processor.py  multi_app_coordinator.py  powerpoint_batch_processor.py  simple_clipboard.py  test_execution.py  window_organizer.py
learn_windows_automation/: __init__.py  pywinauto_automation.py  win32_automation.py
learn_windows_automation/pywinauto/: __init__.py
learn_windows_automation/win32/: __init__.py
prompts/: 01_project_init.md
src/win_automation/: __init__.py  __main__.py  cli.py  core.py
src/win_automation/core/: __init__.py  config.py  exceptions.py  script_manager.py
src/win_automation/utils/: __init__.py  file_system.py  windows.py
tests/: __init__.py  conftest.py  test_advanced_examples.py  test_core.py  test_main.py  test_pywinauto.py  test_utils.py  test_win32.py
