[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-windows-automation"
version = "0.1.0"
description = "A Windows desktop automation toolkit using pywin32 and pywinauto"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "User", email = "user@example.com"}
]
license = {text = "MIT"}
keywords = ["windows", "automation", "desktop", "pywin32", "pywinauto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pywin32>=306; sys_platform == 'win32'",
    "pywinauto>=0.6.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
win32-automation = "learn_windows_automation.win32_automation:main"
pywinauto-automation = "learn_windows_automation.pywinauto_automation:main"
windows-automation-demo = "demo:main"

[project.urls]
Homepage = "https://github.com/yourusername/learn-windows-automation"
Repository = "https://github.com/yourusername/learn-windows-automation"
Documentation = "https://github.com/yourusername/learn-windows-automation#readme"
Issues = "https://github.com/yourusername/learn-windows-automation/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["learn_windows_automation"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
]
