[project]
name = "win-automation"
version = "0.1.0"
description = "Windows automation toolkit for office and system tasks"
readme = "README.md"
authors = [
    { name = "FATESAIKOU", email = "qzsecftbhhhh@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "pywin32>=306",
    "pywinauto>=0.6.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "types-pywin32>=306",
]

[project.scripts]
win-automation = "win_automation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pywinauto.*", "win32.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests with mocked dependencies",
    "integration: Integration tests that require Windows environment",
    "manual: Manual tests for Office applications",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.0",
    "types-pywin32>=310.0.0.20250516",
]
